k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chessworld-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chessworld
  template:
    metadata:
      labels:
        app: chessworld
    spec:
      containers:
        - name: frontend
          image: rowanbattles/frontend:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "250m"
        - name: apigateway
          image: rowanbattles/apigateway:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "250m"
        - name: gameservice
          image: rowanbattles/gameservice:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "250m"
        - name: matchmakingservice
          image: rowanbattles/matchmakingservice:latest
          ports:
            - containerPort: 8082
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "250m"
