k8s/gameservice-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gameservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gameservice
  template:
    metadata:
      labels:
        app: gameservice
    spec:
      containers:
        - name: gameservice
          image: rowanbattles/gameservice:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "250m"
