k8s/matchmakingservice-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matchmakingservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matchmakingservice
  template:
    metadata:
      labels:
        app: matchmakingservice
    spec:
      containers:
        - name: matchmakingservice
          image: rowanbattles/matchmakingservice:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "250m"
