k8s/apigateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: apigateway
spec:
  selector:
    app: apigateway
  ports:
    - port: 5000
      targetPort: 5000
  type: LoadBalancer
