k8s/gameservice-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gameservice
spec:
  selector:
    app: gameservice
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
