k8s/matchmakingservice-service.yml
apiVersion: v1
kind: Service
metadata:
  name: matchmakingservice
spec:
  selector:
    app: matchmakingservice
  ports:
    - port: 8082
      targetPort: 8082
  type: ClusterIP
