k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: apigateway
spec:
  selector:
    app: chessworld
  ports:
    - port: 5000
      targetPort: 5000
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: chessworld
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30000
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: gameservice
spec:
  selector:
    app: chessworld
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: matchmakingservice
spec:
  selector:
    app: chessworld
  ports:
    - port: 8082
      targetPort: 8082
